--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 
 
-<footer>Copyright &copy; By Elisangela Dubiel & Pedro Granato </footer>
+<footer>Copyright &copy; By Elisângela Dubiel & Pedro Granato </footer>
 
 </div>
 
