--- a/form.html
+++ b/form.html
@@ -34,7 +34,7 @@
 </form> 
 </div>
 <br><br><br><br><br>
-<footer>Copyright &copy; By Elisangela Dubiel & Pedro Granato </footer>
+<footer>Copyright &copy; By Elisângela Dubiel & Pedro Granato </footer>
 
 </body>
 </html>
