--- a/sobre.html
+++ b/sobre.html
@@ -29,7 +29,7 @@
 
 <article class="elisangela">
   <h1>Elisângela Dubiel</h1>
-  <p class="resume" >Estudante do 5º de Análise e Desenvolvimento de Sistemas pelo Instituto Federal do estado de São Paulo em Hortolândia </p>
+  <p class="resume" >Estudante do 5º Periodo de Análise e Desenvolvimento de Sistemas pelo Instituto Federal do estado de São Paulo em Hortolândia </p>
 </article>
 <br>
 <nav>
@@ -40,7 +40,7 @@
 
 <article class="resume">
   <h1>Pedro Henrique Granato</h1>
-  <p class="resume" >Estudante do 5º de Análise e Desenvolvimento de Sistemas pelo Instituto Federal do estado de São Paulo em Hortolândia </p>
+  <p class="resume" >Estudante do 5º Periodo de Análise e Desenvolvimento de Sistemas pelo Instituto Federal do estado de São Paulo em Hortolândia </p>
 </article>
 
 
